# muxara

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: update-homebrew.yml
docs/: architecture.md  settings.md  tauri-primer.md
docs/internal/: original-brief.md
docs/release/: create-tickets.sh  tickets.md
spike/: findings.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
spike/src/: classifier.test.ts  classifier.ts  index.ts  tmux-client.ts  types.ts
src/: App.tsx  settingsSchema.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  git.rs  lib.rs  main.rs  preferences.rs  session.rs  store.rs
src-tauri/src/tmux/: classifier.rs  client.rs
src/components/: NewSessionButton.tsx  SessionCard.tsx  SessionGrid.tsx  SettingsPanel.tsx  StatusBadge.tsx
src/hooks/: useSessions.ts
