[package]
name = "muxara"
version = "0.1.1"
description = "Desktop control plane for managing parallel Claude Code sessions"
authors = ["Muxara Contributors"]
license = "MIT"
repository = "https://github.com/muxara/muxara"
homepage = "https://github.com/muxara/muxara"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "muxara_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

